# AndroidOpencvDemo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/itil/smartobjectrecognition/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/itil/smartobjectrecognition/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/itil/smartobjectrecognition/: ExampleUnitTest.java
openCVLibrary2410/: build.gradle
